[+]: adding username to feedbacks response (#54)
